[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/BebasNeueRegular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/UIbg.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="GamePlay" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 147.462, 0 )
scale = Vector2( 7.81487, 9.45926 )
texture = ExtResource( 3 )
centered = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="Background"]
position = Vector2( 32.0266, 1.03539 )
amount = 50
lifetime = 6.0
emission_shape = 2
emission_rect_extents = Vector2( 50, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.75
angular_velocity = 388.1
angular_velocity_random = 0.58
scale_amount = 0.25
scale_amount_random = 0.4

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 390, 530 )

[node name="UI_bg" type="Sprite" parent="."]
position = Vector2( 514.12, 300.388 )
scale = Vector2( 0.8, 0.838889 )
texture = ExtResource( 2 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 650.0
margin_top = 30.0
margin_right = 780.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Score"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreVar" type="Label" parent="UI"]
margin_left = 710.0
margin_top = 30.0
margin_right = 993.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="UI"]
margin_left = 700.0
margin_top = 120.0
margin_right = 780.891
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "Lives"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesVar" type="Label" parent="UI"]
margin_left = 710.0
margin_top = 120.0
margin_right = 993.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bombs" type="Label" parent="UI"]
margin_left = 700.0
margin_top = 160.0
margin_right = 780.891
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Bombs"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombsVar" type="Label" parent="UI"]
margin_left = 710.0
margin_top = 160.0
margin_right = 993.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Label" parent="UI"]
margin_left = 700.0
margin_top = 200.0
margin_right = 780.891
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "Power"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerVar" type="Label" parent="UI"]
margin_left = 710.0
margin_top = 200.0
margin_right = 993.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "0.00"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
